# ot-2048

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/: Untitled Diagram.drawio  arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: board.py  game.py  gameloop.py  index.py  index_pygame.py  index_tekstipohja.py  renderer.py  tiles.py  values.py
src/data/: credentials.json  datahandling.py
src/gameboard/: board.py  gameloop.py  renderer.py  tiles.py  values.py
src/gamelogic/: game.py  gamemotor.py
src/tests/: datahandling_test.py  game_test.py  gameloop_test.py
src/ui/: gameendview.py  gameview.py  resultsview.py  startview.py  ui.py
