[tool.poetry]
name = "2048"
version = "0.1.0"
description = "Ohjelmistotekniikan harjoitustyö"
authors = ["Sari Lautanala <sari.lautanala@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.1"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
